--- a/.github/workflows/try-powershell.yml
+++ b/.github/workflows/try-powershell.yml
@@ -44,4 +44,4 @@ jobs:
 
     - name: Check outputs
       shell: pwsh
-      run: echo ${{ steps.vars.outputs.is_Sast_Enabled }}
+      run: echo ${{ steps.prescription.outputs.is_Sast_Enabled }}
