--- a/.github/workflows/try-powershell.yml
+++ b/.github/workflows/try-powershell.yml
@@ -26,25 +26,41 @@ jobs:
         .\prescription.ps1 -stage 'io' `
           -io_url '${{secrets.IO_SERVER_URL}}' `
           -io_token '${{secrets.IO_SERVER_TOKEN}}' `
-          -project_name 'akshayme-synp/insecure-bank' `
+          -project_name 'akshayme-synp/github-io-sample' `
           -scm_type 'github' `
           -scm_owner 'akshayme-synp' `
-          -scm_repo_name 'insecure-bank' `
+          -scm_repo_name 'github-io-sample' `
           -scm_branch_name 'master' `
           -github_username 'akshayme-synp' `
           -github_access_token '${{secrets.SCM_ACCESS_TOKEN}}' `
           -gitlab_url 'https://www.gitlab.com' `
           -gitlab_token '' `
           -persona 'developer' `
-          -release_type 'minor' `
-          -polaris_project_name 'akshayme-synp/insecure-bank' `
+          -release_type 'major' `
+          -polaris_project_name 'akshayme-synp/github-io-sample' `
           -polaris_server_url '${{secrets.POLARIS_SERVER_URL}}' `
           -polaris_access_token '${{secrets.POLARIS_ACCESS_TOKEN}}' `
           -is_sast_enabled 'true'
         $jsonResponse = Get-Content result.json | ConvertFrom-Json
         $is_Sast_Enabled = $jsonResponse.security.activities.sast.enabled
-        echo "::set-output name=is_Sast_Enabled::$is_Sast_Enabled"
+        echo "::set-output name=sastScan::$is_Sast_Enabled"
 
     - name: Check outputs
       shell: pwsh
-      run: echo ${{ steps.prescription.outputs.is_Sast_Enabled }}
+      run: echo ${{ steps.prescription.outputs.sastScan }}
+      
+      
+    - name: Incremental Static Analysis with Polaris
+      if: ${{steps.prescription.outputs.sastScan == 'true' }}
+      run: |      
+          URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/pulls/${{ github.event.pull_request.number }}/files"
+          FILES=$(curl -s -X GET -G $URL | jq -r '.[] | .filename')
+          echo $FILES | tr " " "\n" > polaris-files-to-scan.txt
+          echo "Files Changed -->"
+          cat polaris-files-to-scan.txt
+          export POLARIS_SERVER_URL=${{ secrets.POLARIS_SERVER_URL}}
+          export POLARIS_ACCESS_TOKEN=${{ secrets.POLARIS_ACCESS_TOKEN}}
+          export POLARIS_FF_ENABLE_COVERITY_INCREMENTAL=true
+          wget -q ${{ secrets.POLARIS_SERVER_URL}}/api/tools/polaris_cli-linux64.zip
+          unzip -j polaris_cli-linux64.zip -d /tmp
+          /tmp/polaris analyze -w --coverity-ignore-capture-failure --incremental polaris-files-to-scan.txt | tee polaris-output.txt
