--- a/.github/workflows/try-powershell.yml
+++ b/.github/workflows/try-powershell.yml
@@ -53,10 +53,12 @@ jobs:
     - name: Incremental Static Analysis with Polaris
       if: ${{steps.prescription.outputs.sastScan == 'true' }}
       run: |      
-          git diff --name-only --diff-filter=AM ${{ github.event.before }} ${{ github.sha }} > polaris-files-to-scan.txt        
+          git diff --name-only --diff-filter=AM ${{ github.event.before }} ${{ github.sha }} > polaris-files-to-scan.txt
           echo "Files Changed -->"
           cat polaris-files-to-scan.txt
           export POLARIS_SERVER_URL=${{ secrets.POLARIS_SERVER_URL}}
           export POLARIS_ACCESS_TOKEN=${{ secrets.POLARIS_ACCESS_TOKEN}}
-          export POLARIS_FF_ENABLE_COVERITY_INCREMENTAL=true          
-          polaris analyze -w --incremental polaris-files-to-scan.txt
+          export POLARIS_FF_ENABLE_COVERITY_INCREMENTAL=true
+          wget -q ${{ secrets.POLARIS_SERVER_URL}}/api/tools/polaris_cli-linux64.zip
+          unzip -j polaris_cli-linux64.zip -d /tmp
+          /tmp/polaris analyze -w --incremental polaris-files-to-scan.txt
